2011-07-29  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c: Integer and memory overflow fixes.
	(RANGED_INTEGERP, TYPE_RANGED_INTEGERP): Remove; these are duplicate
	now that they've been promoted to lisp.h.
	(x_allocate_bitmap_record, x_alloc_image_color)
	(make_image_cache, cache_image, xpm_load):
	Don't update size until alloc is done.
	(xpm_load, lookup_rgb_color, lookup_pixel_color, x_to_xcolors)
	(x_detect_edges):
	Check for size calculation overflow.
	(ct_colors_allocated_max): New constant.
	(x_to_xcolors, x_detect_edges): Reorder multiplicands to avoid
	overflow.

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* gtkutil.c: Integer overflow fixes.
	(get_utf8_string, xg_store_widget_in_map):
	Check for size-calculation overflow.
	(get_utf8_string): Use ptrdiff_t, not size_t, where either will
	do, as we prefer signed integers.
	(id_to_widget.max_size, id_to_widget.used)
	(xg_store_widget_in_map, xg_remove_widget_from_map)
	(xg_get_widget_from_map, xg_get_scroll_id_for_window)
	(xg_remove_scroll_bar, xg_update_scrollbar_pos):
	Use and return ptrdiff_t, not int.
	(xg_gtk_scroll_destroy): Don't assume ptrdiff_t fits in int.
	* gtkutil.h: Change prototypes to match the above.

	* ftfont.c: Check for size overflow.
	(ftfont_get_open_type_spec, setup_otf_gstring, ftfont_shape_by_flt):
	Check for integer overflow in size calculations.

	* fringe.c (Fdefine_fringe_bitmap): Don't update size until alloc works.

	* frame.h (struct frame): Use int, not EMACS_INT, where int works.
	This is for the members text_lines, text_cols, total_lines, total_cols,
	where the system imposes an 'int' limit.

	* frame.c: Integer overflow fixes.
	(set_menu_bar_lines, x_set_frame_parameters, x_set_scroll_bar_width)
	(x_figure_window_size): Check for integer overflow.
	(x_set_alpha): Do not assume XINT fits in int.

	* eval.c: Integer and memory overflow fixes.
	(init_eval_once, grow_specpdl): Don't update size until alloc succeeds.